--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,18 +1,20 @@
-<div class="container-fluid show">
-  <div class="row">
-    <div class="col-md-2"></div>
-    <div class="col-md-8 show_content">
-      <a href="/mypages/#{@post.user.id}"><%= @post.user.name %></a>
-      <h3><%= @post.title %></h3>
-      <p><%= @post.contents %></p>
-      <%= render partial: "posts/like", locals: { post: @post } %>
+<% unless @post.nil? %>
+  <div class="container-fluid show">
+    <div class="row">
+      <div class="col-md-2"></div>
+      <div class="col-md-8 show_content">
+        <a href="/mypages/#{@post.user.id}"><%= @post.user.name %></a>
+        <h3><%= @post.title %></h3>
+        <p><%= @post.contents %></p>
+        <%= render partial: "posts/like", locals: { post: @post } %>
+      </div>
+      <div class="col-md-2"></div>
     </div>
-    <div class="col-md-2"></div>
+    <div class="back">
+      <a href="/posts/index" class="btn btn-primary">投稿一覧に戻る</a>
+    </div>
   </div>
-  <div class="back">
-    <a href="/posts/index" class="btn btn-primary">投稿一覧に戻る</a>
-  </div>
-</div>
+<% end %>
 
 
 
