--- a/app/views/posts/top.html.erb
+++ b/app/views/posts/top.html.erb
@@ -16,10 +16,10 @@
     <div class="row">
         <div class="col-md-3"></div>
         <div class="col-md-6">
-            <h2 class="title">人気の投稿</h2>
+            <h2 class="title">人気の投稿<%= @result_size %></h2>
             <% unless @posts.nil? %>
                 <% if current_user %>
-                    <% @posts.first(3).each do |post| %>
+                    <% [@first, @second, @third].each do |post| %>
                         <div class="post">
                             <p><%= post.user.name %></p>
                             <p><span class="category"><%= post.style %></span><span class="category"><%= post.subject %></span><span class="category"><%= post.grade %></span></p>
@@ -35,7 +35,7 @@
                         </div>
                     <% end %>
                 <% else %>
-                    <% @posts.first(3).each do |post| %>
+                    <% [@first, @second, @third].each do |post| %>
                         <div class="post">
                             <p><%= post.user.name %></p>
                             <p><span class="category"><%= post.style %></span><span class="category"><%= post.subject %></span><span class="category"><%= post.grade %></span></p>
