--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,8 +2,8 @@
 <div class="contaniner-fluid address_edit">
   <div class="row">
     <div class="col-md-3"></div>
-    <div class="col-md-6">
-      <h2>メールアドレス・パスワード編集</h2>
+    <div class="col-md-6 edit_form">
+      <h2 class="black_title">メールアドレス・パスワード編集</h2>
 
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
         <%= render "devise/shared/error_messages", resource: resource %>
@@ -40,6 +40,7 @@
           <%= f.submit "変更" %>
         </div>
       <% end %>
+      <%= link_to "戻る", :back, class: "fa fa-arrow-left return" %>
     </div>
     <div class="col-md-3"></div>
     
@@ -48,12 +49,9 @@
 <div class="container-fluid address_edit">
   <div class="row">
     <div class="col-md-3"></div>
-    <div class="col-md-6">
-      <h3>アカウントの削除</h3>
-
-      <p><%= button_to "削除", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-      <%= link_to "戻る", :back %>
+    <div class="col-md-6 edit_form">
+      <h3 class="black_title">アカウントの削除</h3>
+      <p><%= button_to "削除", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-danger" %></p>
     </div>
     <div class="col-md-3"></div>
   </div>
