--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,9 @@
     <header>
       <ul>
         <li class="menu"><%= link_to("トップページ", "/", {class: "menu_link"}) %></li>
-        <li class="menu"><%= link_to("新規投稿", "/posts/new", {class: "menu_link"})%></li>
+        <% if current_user %>
+          <li class="menu"><%= link_to("新規投稿", "/posts/new", {class: "menu_link"})%></li>
+        <% end %>
         <li class="menu"><%= link_to("投稿一覧", "/posts/index", {class: "menu_link"})%></li>
         <% if current_user %>
           <% unless request.path.include?("mypages") %>
@@ -107,7 +109,6 @@
         }
       })
     </script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
