--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,14 +8,14 @@
     <body class="posts_index">
         <div class="container-fluid index">
             <div class="row">
-                <div class="col-md-2"></div>
-                <div class="col-md-8 contents">
+                <div class="col-md-1"></div>
+                <div class="col-md-10 contents">
                     <h3 class="recent_post">最新の投稿</h3>
                     <br>
                     <% if current_user %>
                         <% @posts.each do |post| %>
                             <div class="post">
-                                <p><%= post.user.name %></p>
+                                <p class="user_name"><%= post.user.name %></p>
                                 <p><span class="category"><%= post.style %></span><span class="category"><%= post.subject %></span><span class="category"><%= post.grade %></span></p>
                                 <p class="post_title"><%= post.title %></p>
                                 <p class="post_content"><%= post.contents %></p>
@@ -44,7 +44,7 @@
                         <% end %>
                     <% end %>
                 </div>
-                <div class="col-md-2"></div>
+                <div class="col-md-1"></div>
             </div>
             
         </div>
