--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -31,6 +31,10 @@ header {
     overflow: hidden;
 }
 
+#nav-drawer {
+    display: none;
+}
+
 ul {
     list-style: none;
 }
@@ -43,7 +47,6 @@ ul {
     color: white;
     margin-left: 40px;;
     height: 70px;  
-    width: 7%;
     text-decoration: none;
     background-color: rgba(0, 0, 0, 0.8);
     border: none;
@@ -232,8 +235,7 @@ footer {
 .search_view {
     margin-top: 70px;
     padding-top: 30px;
-    background-image: url("/images/no113-01.jpg");
-    background-size: cover;
+    background-color: #1E1E36;
     min-height: 650px;
 }
 
@@ -307,4 +309,129 @@ footer {
     border-radius: 5px;
     min-height: 520px;   
     text-align: left;
+}
+
+@media(max-width: 1000px) {
+
+    #nav-drawer {
+        display: block;
+    }
+
+    .menu_link {
+        display: none;
+    }
+
+    .search {
+        display: none;
+    }
+
+    .humburger {
+        color: white;
+        margin-top: 25px;
+        margin-left: 30px;
+        font-size: 20px;
+        float: right;
+    }
+
+    .user {
+        line-height: normal;
+    }
+
+    /*チェックボックス等は非表示に*/
+    .nav-unshown {
+    display:none;
+    }
+  
+    /*アイコンのスペース*/
+    #nav-open {
+        display: inline-block;
+        width: 30px;
+        height: 22px;
+        vertical-align: middle;
+    }
+    
+    /*ハンバーガーアイコンをCSSだけで表現*/
+    #nav-open span, #nav-open span:before, #nav-open span:after {
+        position: absolute;
+        display: block;
+        content: '';
+        cursor: pointer;
+    }
+    #nav-open span:before {
+        bottom: -8px;
+    }
+    #nav-open span:after {
+        bottom: -16px;
+    }
+    
+    /*閉じる用の薄黒カバー*/
+    #nav-close {
+        display: none;/*はじめは隠しておく*/
+        position: fixed;
+        z-index: 99;
+        top: 0;/*全体に広がるように*/
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: black;
+        opacity: 0;
+        transition: .3s ease-in-out;
+    }
+    
+    /*中身*/
+    #nav-content {
+        overflow: auto;
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 9999;/*最前面に*/
+        width: 90%;/*右側に隙間を作る（閉じるカバーを表示）*/
+        max-width: 330px;/*最大幅（調整してください）*/
+        height: 100%;
+        background: #1E1E36;/*背景色*/
+        transition: .3s ease-in-out;/*滑らかに表示*/
+        -webkit-transform: translateX(-105%);
+        transform: translateX(-105%);/*左に隠しておく*/
+    }
+  
+    /*チェックが入ったらもろもろ表示*/
+    #nav-input:checked ~ #nav-close {
+        display: block;/*カバーを表示*/
+        opacity: .5;
+    }
+    
+    #nav-input:checked ~ #nav-content {
+        -webkit-transform: translateX(0%);
+        transform: translateX(0%);/*中身を表示（右へスライド）*/
+        box-shadow: 6px 0 25px rgba(0,0,0,.15);
+    }
+
+    .nav-header {
+        background-color: black;
+        height: 70px;
+        padding-top: 20px;
+        text-align: center;
+    }
+
+    ul {
+        padding-left: 0px;
+    }
+
+    .menu_xs {
+        display: block;
+        line-height: 70px;
+        text-align: left;
+        color: white;
+        height: 70px;  
+        width: 100%;
+        padding-left: 20px;
+        text-decoration: none;
+        border: none;
+    }
+
+    .menu_xs:hover {
+        background-color: #F8F8F9;
+        color: #1E1E36;
+        text-decoration: none;
+    }
 }
