--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -113,7 +113,7 @@
       <div class="search">
         <%= form_tag("/posts/search", method: :get) do %>
             <%= text_field_tag :search %>
-            <%= submit_tag '検索する'  %>
+            <%= submit_tag '検索する', class: "btn, btn-default"%>
         <% end %>
       </div>
     </header>
@@ -121,7 +121,7 @@
     <%= yield %>
     
     <footer>
-      <h3 class="footer_title">How To Teach</h3>
+      <a href="/" class="footer_title">How To Teach</a>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
