--- a/app/views/mypages/index.html.erb
+++ b/app/views/mypages/index.html.erb
@@ -42,9 +42,9 @@
             <p class="post_content"><%= post.contents %></p>
             <p class="created_at"><%= post.created_at %></p>
             <% if current_user.already_liked?(post) %>
-                <p><i class="fa fa-heart" style="color: red;" aria-hidden="true"></i><%= post.liked_users.count %></p>
+                <p><i class="fa fa-heart" style="color: red;" aria-hidden="true"></i><span class="like_count"><%= post.liked_users.count %></span></p>
             <% else %>
-                <p><i class="far fa-heart" style="color: red;" aria-hidden="true"></i><%= post.liked_users.count %></p>
+                <p><i class="far fa-heart" style="color: red;" aria-hidden="true"></i><span class="like_count"><%= post.liked_users.count %></span></p>
             <% end %>
             <a href="/posts/<%= post.id %>/show"></a>
           </div>  
@@ -57,9 +57,9 @@
             <p><span class="user_name"><%= post.user.name %></span><%= post.title %></p>
             <p class="created_at"><%= post.created_at %></p>
             <% if current_user.already_liked?(post) %>
-                <p><i class="fa fa-heart" style="color: red;" aria-hidden="true"></i><%= post.liked_users.count %></p>
+                <p><i class="fa fa-heart" style="color: red;" aria-hidden="true"></i><span class="like_count"><%= post.liked_users.count %></span></p>
             <% else %>
-                <p><i class="far fa-heart" style="color: red;" aria-hidden="true"></i><%= post.liked_users.count %></p>
+                <p><i class="far fa-heart" style="color: red;" aria-hidden="true"></i><span class="like_count"><%= post.liked_users.count %></span></p>
             <% end %>
             <a href="/posts/<%= post.id %>/show"></a>
           </div>
