--- a/app/views/mypages/index.html.erb
+++ b/app/views/mypages/index.html.erb
@@ -46,7 +46,7 @@
             <% else %>
                 <p><i class="far fa-heart" style="color: red;" aria-hidden="true"></i><span class="like_count"><%= post.liked_users.count %></span></p>
             <% end %>
-            <a href="/posts/<%= post.id %>/show"></a>
+            <a href="/posts/<%= post.id %>/show" class="post_link"></a>
           </div>  
         <% end %>
       </div>
