--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -36,8 +36,13 @@
                                 <% else %>
                                     <p><i class="far fa-heart" style="color: red;" aria-hidden="true"></i><span class="like_count"><%= post.liked_users.count %></span></p>
                                 <% end %>
-                                <p class="created_at"><%= post.created_at %></p>
-                                <a href="/posts/<%= post.id %>/show"></a>
+                                <p class="created_at">
+                                    <% if post.user.id == current_user.id %>
+                                        <%= link_to "削除", destroy_path(post.id), {class: "delete_link", method: :delete} %>
+                                    <% end %>
+                                    <%= post.created_at %>
+                                </p>
+                                <a href="/posts/<%= post.id %>/show" class="post_link"></a>
                             </div>
                             <br>
                         <% end %>
@@ -50,7 +55,7 @@
                                 <p class="post_content"><%= post.contents %></p>
                                 <p><i class="far fa-heart" style="color: red;" aria-hidden="true"></i><span class="like_count"><%= post.liked_users.count %></span></p>
                                 <p class="created_at"><%= post.created_at %></p>
-                                <a href="/posts/<%= post.id %>/show"></a>
+                                <a href="/posts/<%= post.id %>/show" class="post_link"></a>
                             </div>
                             <br>
                         <% end %>
