--- a/app/views/posts/top.html.erb
+++ b/app/views/posts/top.html.erb
@@ -53,7 +53,7 @@
                                 <p><i class="far fa-heart" style="color: red;" aria-hidden="true"></i><span class="like_count"><%= post.liked_users.count %></span></p>
                             <% end %>
                             <p class="created_at"><%= post.created_at %></p>
-                            <a href="/posts/<%= post.id %>/show"></a>
+                            <a href="/posts/<%= post.id %>/show" class="post_link"></a>
                         </div>
                     <% end %>
                 <% else %>
@@ -65,7 +65,7 @@
                             <p class="post_content"><%=safe_join(post.contents.split("\n"),tag(:br))%></p>
                             <p><i class="far fa-heart" style="color: red;" aria-hidden="true"></i><span class="like_count"><%= post.liked_users.count %></span></p>
                             <p class="created_at"><%= post.created_at %></p>
-                            <a href="/posts/<%= post.id %>/show"></a>
+                            <a href="/posts/<%= post.id %>/show" class="post_link"></a>
                         </div>
                         <br>
                     <% end %>
